# cpp-pytorch-ssd

./: CMakeLists.txt  README.md  mb2_ssd_lite_pth_to_pt.py  run_ssd_example.py  traced_inference_example.cpp  traced_inference_example.py  train.sh
